fix no printouts original printouts, datatables cards text align

--- a/resources/datatables/style.css
+++ b/resources/datatables/style.css
@@ -19,6 +19,7 @@
 .visualdata.datatable.cards tbody tr td {
 	display: block;
 	border: 0;
+	text-align: left;
 }
 
 .visualdata.datatable.cards td:before {
